fix: Eureka and others properties
